--- a/full-stack-dev.html
+++ b/full-stack-dev.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Go Hackathon | Artificial Intelligence and Machine Learning</title>
+        <title>Go Hackathon | Full Stack Development</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -70,28 +70,25 @@
 
 <body id="body">
     <div class="evebanner">
-        <img src="img/banner/AI-ML.png" alt="">
+        <img src="img/banner/full-stack-development.png" alt="">
       </div>
         
             <div class="container">
                 <div class="row">
                     <div class="aboutsection col-lg-7">
-                        <h1>Artificial Intelligence</h1>
-                        <p>AI and machine learning are rapidly developing fields that have the potential to 
-                            revolutionize many industries and change the way we live and work. It involves the 
-                            development of computer systems that can perform tasks that would normally require 
-                            human intelligence. <br>
+                        <h1>Full Stack Development</h1>
+                        <p>Full stack development is a complex and rapidly evolving field that requires a 
+                            broad range of skills and knowledge. However, it can also be a rewarding and 
+                            lucrative career path for those who are passionate about web development and enjoy 
+                            working on both the front-end and back-end of applications. <br>
                         </p>
-                        <p>Artificial Intelligence (AI) is a broad field that deals with the creation of 
-                            intelligent machines that can perform tasks that typically require human 
-                            intelligence, such as visual perception, speech recognition, decision-making, 
-                            and natural language processing. ML techniques are used to enable machines to 
-                            recognize patterns in data, classify and categorize information, and make 
-                            predictions based on previous experiences.
+                        <p>Students receive a thorough introduction to database and full stack development 
+                            in this course. With the technical understanding of front-end and back-end 
+                            programming, students will discover the nuances of data structures and algorithms.
                         </p> 
                     </div>
                     <div class="imgofabout col-lg-5">
-                        <img class="imgofabout" src="img/courses/AI-ML.png" alt="Dev">
+                        <img class="imgofabout" src="img/courses/full-stack.png" alt="Dev">
                     </div>
                 </div>
             </div>
@@ -99,37 +96,62 @@
     <div class="container">
         <div class="row">
             <div class="aboutsection-bottom col-lg-12">
-                <h2>AI and ML Course Description</h2>
-                <p>This course provides students with a comprehensive introduction to data science and machine 
-                    learning. Students will learn how to extract insights and knowledge from large data sets 
-                    using popular data analysis and machine learning techniques. 
-                    The course will cover the following topics: <br>
+                <h2>Course Description</h2>
+                <p>Full Stack Development is a comprehensive course that covers all aspects of web development, 
+                    from front-end to back-end, to equip learners with the skills required to build end-to-end 
+                    web applications. This course aims to provide learners with an understanding of the 
+                    technologies, tools, and frameworks used in full stack development and hands-on experience 
+                    in building web applications, topics that are typically covered: <br>
                 </p>
+                <strong>Introduction to Web Development</strong>
                 <ul>
-                    <li>Introduction to Data Science and Machine Learning</li>
-                    <li>Data Wrangling and Exploration</li>
-                    <li>Data Visualization and Communication</li>
-                    <li>Supervised Learning</li>
-                    <li>Unsupervised Learning</li>
-                    <li>Deep Learning</li>
-                    <li>Time Series Analysis</li>
-                    <li>Model Evaluation and Deployment</li>
+                    <li>Web architecture and protocols</li>
+                    <li>Client-server model</li>
+                    <li>Basic web technologies such as HTML, CSS, and JavaScript</li>
+                </ul>
+                <strong>Front-End Development</strong>
+                <ul>
+                    <li>Introduction to front-end frameworks such as React and Angular</li>
+                    <li>Responsive design and user experience</li>
+                    <li>Handling user input and events</li>
+                    <li>Interfacing with APIs</li>
+                </ul>
+                <strong>Back-End Development</strong>
+                <ul>
+                    <li>Server-side languages such as Node.js, ASP.NET</li>
+                    <li>Relational and non-relational databases such as MySQL, MongoDB</li>
+                    <li>Web servers and RESTful APIs</li>
+                    <li>Security and authentication</li>
+                </ul>
+                <strong>Deployment</strong>
+                <ul>
+                    <li>Deploying web applications</li>
+                    <li>Version control using Git</li>
+                </ul>
+                <strong>Project Work</strong>
+                <ul>
+                    <li>Working on a real-world full stack development project in a team environment</li>
+                    <li>Applying concepts learned throughout the course to build a fully functional web application</li>
                 </ul>
                 <h2>Learning Outcome</h2>
-                <p>Upon completion of the course, students will be able to: <br> </p>
+                <p>Upon completing a Full Stack Development course, learners should be able to: <br> </p>
                 <ul>
-                    <li>Understand the fundamental concepts of data science and machine learning</li>
-                    <li>Work with large datasets and perform data wrangling and exploration</li>
-                    <li>Visualize data and communicate insights effectively</li>
-                    <li>Apply supervised, unsupervised, and deep learning techniques to solve real-world problems</li>
-                    <li>Perform time series analysis and forecasting</li>
-                    <li>Evaluate machine learning models and deploy them for use</li>
+                    <li>Understand web architecture and protocols, the client-server model, and basic web technologies such as HTML, CSS, and JavaScript.</li>
+                    <li>Build user interfaces using front-end frameworks such as React and Angular, and implement responsive design and user experience.</li>
+                    <li>Handle user input and events, and interface with APIs to retrieve and display data.</li>
+                    <li>Develop server-side applications using server-side languages such as Node.js, asp.net, and manage data using relational and non-relational databases such as MySQL, MongoDB.</li>
+                    <li>Implement security and authentication in web applications, and deploy web applications.</li>
+                    <li>Use continuous integration and continuous deployment (CI/CD) pipelines to automate the deployment of web applications.</li>
+                    <li>Work effectively in a team environment and apply agile development methodologies.</li>
+                    <li>Debug and troubleshoot web applications using tools and techniques such as logging, debugging, and profiling.</li>
+                    <li>Apply best practices for testing, performance optimization, and mobile web development to ensure the quality and scalability of web applications.</li>
                 </ul>
+                <a class="btn btn-primary" href="#" role="button">Register Now</a>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="aboutsection-agritech col-lg-12">
                 <h2>Course Format</h2>
@@ -144,10 +166,9 @@
                     The course assumes familiarity with programming concepts and the Python programming language. 
                     Basic understanding of statistics and linear algebra is recommended.
                 </p>
-                <a class="btn btn-primary" href="#" role="button">Register Now</a>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
     <footer class="footer-section">
