--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                              machine learning. Students will learn how to extract insights and knowledge from 
                              large data sets using popular data analysis and machine learning techniques.  
                         </p>
-                        <a class="btn btn-primary" href="training.html" role="button">Know More</a>
+                        <a class="btn btn-primary" href="ai-ml.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
