--- a/krishi-vikalp.html
+++ b/krishi-vikalp.html
@@ -70,13 +70,13 @@
 </nav>             
 <body class="body">
     <div class="evebanner">
-        <img src="img/banner/Events.png" alt="">
+        <img src="img/banner/krishi-vikalp.png" alt="">
     </div>
     <div class="row eventbody">
         <div class="containereventdetail col-lg-12">
             <div class="past-event">
                 <div>
-                    <h6><strong>Event Name:- </strong><KRISHI-VIKALP></KRISHI-VIKALP></h6>
+                    <h6><strong>Event Name:- </strong>KRISHI-VIKALP</h6>
                     <h6><strong>Event Mascot:- <img src="img/Krishi.jpg" alt=""></strong></h6>
                     <h6><strong>Event Date:- </strong>25th feb 2023</h6>
                     <h6><strong>Event Duration:- </strong>2-4 Hours</h6>
