--- a/training.html
+++ b/training.html
@@ -119,7 +119,7 @@
                                     students will discover the nuances of data structures and algorithms.
                                 </p>
                                 <a class="btn btn-primary" href="#" role="button">Buy Now</a>
-                                <a class="btn btn-primary" href="#" role="button">Know More</a>
+                                <a class="btn btn-primary" href="full-stack-dev.html" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
