--- a/training.html
+++ b/training.html
@@ -241,7 +241,7 @@
                         <div class="card shadow-sm">
                             <img src="img/tech4.jpg" alt="">
                             <div class="card-body">
-                                <h4>Mock Interviews</h4>
+                                <h4>Mock Interviews Practice</h4>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit longer.
                                 </p>
