--- a/mentorship.html
+++ b/mentorship.html
@@ -1290,7 +1290,7 @@
             <tr  class="comapre-us-table-body-1">
               <td class="comapre-us-table-body"></td>
               <td class="comapre-us-table-body"></td>
-              <td class="comapre-us-table-body"></td>
+              <td class="comapre-us-table-body"><a class="btn btn-secondary" href="#">Sign me up!</a></td>
               <td class="comapre-us-table-body"></td>
               <td class="comapre-us-table-body"></td>
               <td class="comapre-us-table-body"></td>
@@ -1307,7 +1307,7 @@
           <div class="accordion-item">
             <div class="accordion-header" id="headingOne">
               <div class="row">
-                <div class="col-md-11 headingOne-heading"> What is Mentorship? </div>
+                <div class="col-md-11 headingOne-heading"> What is Unstop Mentorship? </div>
                 <div class="col-md-1"><button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   </button></div>
@@ -1316,14 +1316,14 @@
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
               data-bs-parent="#frequent-questions-block">
               <div class="accordion-body">
-                Mentorship is a unique platform which connects top quality mentors from around the globe with
+                Unstop Mentorship is a unique platform which connects top quality mentors from around the globe with
                 ambitious mentees who are looking for guidance, all on a single platform.
               </div>
             </div>
           </div><div class="accordion-item">
             <div class="accordion-header" id="headingTwo">
               <div class="row">
-                <div class="col-md-11 headingOne-heading"> What is Mentorship? </div>
+                <div class="col-md-11 headingOne-heading"> What is Unstop Mentorship? </div>
                 <div class="col-md-1"><button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapsetwo">
                   </button></div>
@@ -1332,14 +1332,14 @@
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
               data-bs-parent="#frequent-questions-block">
               <div class="accordion-body">
-                Mentorship is a unique platform which connects top quality mentors from around the globe with
+                Unstop Mentorship is a unique platform which connects top quality mentors from around the globe with
                 ambitious mentees who are looking for guidance, all on a single platform.
               </div>
             </div>
           </div><div class="accordion-item">
             <div class="accordion-header" id="headingThree">
               <div class="row">
-                <div class="col-md-11 headingOne-heading"> What is Mentorship? </div>
+                <div class="col-md-11 headingOne-heading"> What is Unstop Mentorship? </div>
                 <div class="col-md-1"><button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapsethree">
                   </button></div>
@@ -1348,7 +1348,7 @@
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
               data-bs-parent="#frequent-questions-block">
               <div class="accordion-body">
-                Mentorship is a unique platform which connects top quality mentors from around the globe with
+                Unstop Mentorship is a unique platform which connects top quality mentors from around the globe with
                 ambitious mentees who are looking for guidance, all on a single platform.
               </div>
             </div>
